<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/Primary">
    
    <data>
        <import type="android.view.View"/>
        <variable
            name = "UserData"
            type="com.example.submission2belajarfundamentalaplikasiandroid.user.User"/>
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_detail_holder"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Primary"
            android:padding="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!--ini bagian foto-->
            <ImageView
                android:id="@+id/detail_avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="8dp"
                app:avatar='@{UserData.avatar_url ?? "" }'
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/detail_txt_Repos"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_user_24"/>

            <TextView
                android:id="@+id/detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{UserData.type}"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_name"
                tools:text="@string/type_placeholder"/>

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@{UserData.name??UserData.login}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_avatar"
                tools:text="@string/name_placeholder" />

            <TextView
                android:id="@+id/detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{UserData.location}"
                android:drawableStart="@drawable/ic_location_24"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="@{UserData.location!=null? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_type"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                tools:text="@string/location_placeholder"
                app:drawableStartCompat="@drawable/ic_location_24"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <!--ini bagian repository-->
            <TextView
                android:id="@+id/detail_txt_Repos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="18dp"
                android:text="@string/text_repos"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toEndOf="@id/detail_avatar"
                app:layout_constraintTop_toBottomOf="@id/detail_publicRepos"
                app:layout_constraintEnd_toStartOf="@id/detail_txt_followers"/>

            <TextView
                android:id="@+id/detail_publicRepos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@{String.valueOf(UserData.public_repos)}"
                tools:text="@string/pubRepo_placeholder"
                app:layout_constraintStart_toStartOf="@id/detail_txt_Repos"
                app:layout_constraintTop_toTopOf="@id/detail_avatar"
                app:layout_constraintEnd_toEndOf="@id/detail_txt_Repos"/>
            <!--ini bagian repository-->

            <!-- ini bagian follower-->
            <TextView
                android:id="@+id/detail_txt_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="18dp"
                android:text="@string/txt_folower"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toEndOf="@id/detail_txt_Repos"
                app:layout_constraintTop_toBottomOf="@id/detail_followers"
                app:layout_constraintEnd_toStartOf="@id/detail_txt_following"/>

            <TextView
                android:id="@+id/detail_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:text="@{String.valueOf(UserData.followers)}"
                tools:text="@string/follower_placeholder"
                app:layout_constraintTop_toTopOf="@id/detail_publicRepos"
                app:layout_constraintStart_toStartOf="@id/detail_txt_followers"
                app:layout_constraintEnd_toEndOf="@id/detail_txt_followers"/>
            <!-- ini bagian follower -->

            <!-- ini bagian following-->
            <TextView
                android:id="@+id/detail_txt_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_folowing"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toEndOf="@id/detail_txt_followers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_following"/>

            <TextView
                android:id="@+id/detail_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@{String.valueOf(UserData.following)}"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/detail_txt_following"
                app:layout_constraintTop_toTopOf="@id/detail_followers"
                app:layout_constraintEnd_toEndOf="@id/detail_txt_following"
                tools:text="@string/following_placeholder"/>
            <!-- ini bagian following-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_detail"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/Primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>