<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.example.submission2belajarfundamentalaplikasiandroid.user.User" />
    </data>
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView.Dark"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/list_avatarUrl"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:transitionName="imageView_trans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_user_24"/>
            <!--app:avatar="@{data.avatar_url}"/>-->

            <TextView
                android:id="@+id/list_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{data.login}"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toEndOf="@+id/list_avatarUrl"
                app:layout_constraintTop_toTopOf="@id/list_avatarUrl"
                app:layout_constraintBottom_toBottomOf="@id/list_avatarUrl"
                tools:text="@string/login_placeholder" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/img_github"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/deskripsi_img_github" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>